--- a/Module2assigment-01.html
+++ b/Module2assigment-01.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <title>Module 2 Assigment</title>
-<link rel="stylesheet" href="mod2.css">
+<link rel="stylesheet" href="mod2-01.css">
 <style>
 	* {box-sizing: border-box;}
 
